k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudnorth-backend
  labels:
    app: cloudnorth-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudnorth-backend
  template:
    metadata:
      labels:
        app: cloudnorth-backend
    spec:
      containers:
      - name: backend
        image: bettym72/cloudnorth-backend:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
