k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudnorth-backend
spec:
  type: ClusterIP
  selector:
    app: cloudnorth-backend
  ports:
    - port: 3000
      targetPort: 3000
